C/include/codata_constants_2010.h

ADD_IMPORT extern const int YEAR_2010;
ADD_IMPORT extern const struct codata_constant_type LATTICE_SPACING_OF_SILICON_2010;
ADD_IMPORT extern const struct codata_constant_type ALPHA_PARTICLE_ELECTRON_MASS_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ALPHA_PARTICLE_MASS_2010;
ADD_IMPORT extern const struct codata_constant_type ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_2010;
ADD_IMPORT extern const struct codata_constant_type ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV_2010;
ADD_IMPORT extern const struct codata_constant_type ALPHA_PARTICLE_MASS_IN_U_2010;
ADD_IMPORT extern const struct codata_constant_type ALPHA_PARTICLE_MOLAR_MASS_2010;
ADD_IMPORT extern const struct codata_constant_type ALPHA_PARTICLE_PROTON_MASS_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type ANGSTROM_STAR_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_CONSTANT_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP_2010;